# rtl8196e

./: .config  .config.old  .directory  .gitignore  Packages  README  md5sums
build_dir/host/bc-1.06.95/: COPYING.LIB  ChangeLog  FAQ  Makefile  Makefile.am  Makefile.in  NEWS  config.h  config.h.in  config.status  configure  configure.in
build_dir/host/bc-1.06.95/Test/: fact.b  raise.b  timetest
build_dir/host/bc-1.06.95/bc/: Makefile  Makefile.am  Makefile.in  bc.c  bc.h  bc.y  bcdefs.h  const.h  execute.c  global.c  global.h  libmath.b  load.c  main.c  proto.h  sbc.y  scan.c  scan.l  storage.c  util.c  warranty.c
build_dir/host/bc-1.06.95/bc/.deps/: bc.Po  execute.Po  global.Po  load.Po  main.Po  scan.Po  storage.Po  util.Po  warranty.Po
build_dir/host/bc-1.06.95/dc/: Makefile  Makefile.am  Makefile.in  TODO  array.c  dc-proto.h  dc-regdef.h  dc.c  dc.h  eval.c  misc.c  numeric.c  stack.c  string.c
build_dir/host/bc-1.06.95/dc/.deps/: array.Po  dc.Po  eval.Po  misc.Po  numeric.Po  stack.Po  string.Po
build_dir/host/bc-1.06.95/doc/: Makefile  Makefile.am  Makefile.in  bc.info  bc.texi  dc.1  dc.info  dc.texi  texi-ver.incl  texi-ver.incl.in
build_dir/host/bc-1.06.95/h/: number.h
build_dir/host/bc-1.06.95/lib/: Makefile  Makefile.am  Makefile.in  number.c  testmul.c
build_dir/host/bc-1.06.95/lib/.deps/: getopt.Po  getopt1.Po  number.Po  vfprintf.Po
build_dir/host/intltool-0.40.6/: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.status  configure  configure.in  intltool-extract  intltool-extract.in  intltool-merge  intltool-merge.in  intltool-prepare  intltool-prepare.in  intltool-unicodify.in  intltool-update  intltool-update.in  intltool.spec  intltool.spec.in  intltoolize  intltoolize.in
build_dir/host/intltool-0.40.6/doc/: Makefile  Makefile.in
build_dir/host/intltool-0.40.6/tests/: Makefile  Makefile.in  selftest.pl  selftest.pl.in
build_dir/host/intltool-0.40.6/tests/cases/: Makefile  Makefile.am  Makefile.in  test.scm
build_dir/host/intltool-0.40.6/tests/results/: Makefile  Makefile.am  Makefile.in  context.xml.in.h  extract-comments.xml.h  extract12.xml.in.h  extract13.desktop.in.h  extract14.xml.in.h  extract7.xml.h  extract8.glade.h  extract9.xml.in.h  iso88591text.xml.in.h  space-preserve.xml.in.h  test-quoted.dtd.h  test.schemas.in.h  test.scm.h  unicodetext.xml.in.h
build_dir/host/mklibs-0.1.35/: Makefile  Makefile.in  config.guess  config.h  config.status  configure  configure.ac  depcomp  install-sh
build_dir/host/mklibs-0.1.35/autom4te.cache/: output.1  requests  traces.0  traces.1
build_dir/host/mklibs-0.1.35/debian/: changelog  control  mklibs-copy.install  mklibs.install  rules
build_dir/host/mklibs-0.1.35/lib/: Makefile  Makefile.am  Makefile.in
build_dir/host/mklibs-0.1.35/lib/mklibs/: Makefile  Makefile.am  Makefile.in
build_dir/host/mklibs-0.1.35/src/: Makefile  Makefile.am  Makefile.in  mklibs-copy.1  mklibs.1
build_dir/host/mklibs-0.1.35/src/mklibs-readelf/: Makefile  Makefile.am  Makefile.in  elf.cpp  elf.hpp  elf_data.hpp  elf_defs.hpp  elf_endian.hpp  endian.hpp  main.cpp  mklibs-readelf.1
build_dir/host/mm-common-0.9.6/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.status  configure  configure.ac
build_dir/host/mm-common-0.9.6/doctags/: mm-common-libstdc++-uninstalled.pc  mm-common-libstdc++-uninstalled.pc.in  mm-common-libstdc++.pc  mm-common-libstdc++.pc.in
build_dir/host/mm-common-0.9.6/macros/: mm-common.m4
build_dir/host/mm-common-0.9.6/skeletonmm/: .gitignore  AUTHORS  Makefile.am  README  configure.ac  skeletonmm.doap
build_dir/host/mm-common-0.9.6/skeletonmm/codegen/: Makefile.am
build_dir/host/mm-common-0.9.6/skeletonmm/doc/: Makefile.am
build_dir/host/mm-common-0.9.6/skeletonmm/examples/: Makefile.am
build_dir/host/mm-common-0.9.6/skeletonmm/skeleton/: .gitignore  skeletonmm-uninstalled.pc.in  skeletonmm.h  skeletonmm.pc.in  skeletonmmconfig.h.in
build_dir/host/mm-common-0.9.6/util/: mm-common-prepare  mm-common-prepare.1  mm-common-prepare.1.in  mm-common-prepare.in  mm-common-util.pc  mm-common-util.pc.in
build_dir/host/quilt-0.63/: AUTHORS  Makefile  Makefile.in  NEWS  TODO  aclocal.m4  config.status  configure  configure.ac  git-desc  quilt.spec  quilt.spec.in
build_dir/host/quilt-0.63/autom4te.cache/: output.0  requests  traces.0
build_dir/host/quilt-0.63/compat/: awk  column.in  date.in  find  getopt.in  mktemp.in  sendmail.in
build_dir/host/quilt-0.63/doc/: Makefile  README  README.EMACS  README.in  main.tex  quilt.1  quilt.1.in  reference
build_dir/host/quilt-0.63/po/: de.po  fr.po  ja.po  quilt.pot  ru.po
build_dir/host/quilt-0.63/quilt/: add.in  annotate.in  applied.in  delete.in  diff.in  edit.in  files.in  fold.in  fork.in  graph.in  grep.in  header.in  import.in  mail  mail.in  new.in  next.in  patches.in  pop.in  previous.in  push.in  refresh.in  remove.in  rename.in  revert.in  series.in  setup.in  snapshot.in  top.in  unapplied.in  upgrade.in
build_dir/host/quilt-0.63/test/: add-filename-check.test  annotate.test  applied.test  backup-files.test  colon-in-patch-name.test  comments.test  conflicts.test  create-delete.test  delete.test  dir-a-b.test  dotglob.test  duplicate-patch-in-series.test  edit.test  empty-files.test  empty.test  example1.test  faildiff.test  failpop.test  fold.test  formats.test  half-applies.test  header.test  import.test  import2.test  mail.test  merge.test  missing.test  new-nosubdir.test  new.test  no-file-to-patch.test  nolink.test  null-bug.test  one.test  patch-wrapper.test  perms.test  refresh-z.test  refresh.test  refresh_patch_order.test  remember-locations.test  remove-trailing-ws.test  (+16 more)
build_dir/host/xfce4-dev-tools-4.8.0/: ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  configure  configure.in  xfce4-dev-tools.spec  xfce4-dev-tools.spec.in
build_dir/host/xfce4-dev-tools-4.8.0/m4macros/: Makefile.am  Makefile.in
build_dir/host/xfce4-dev-tools-4.8.0/scripts/: Makefile.am  Makefile.in  xdt-autogen.in.in  xdt-commit
dl/: DB-1.7.11.tgz  (+207 more)
(+16377 files in other folders)
