NULL =

EXTRA_DIST =					\
	az.po					\
	context.xml.in				\
	extract-comments.xml			\
	extract1.desktop			\
	extract10.templates_			\
	extract13.desktop.in			\
	extract3.xml.in				\
	extract6.glade				\
	extract7.xml				\
	extract8.glade				\
	extract9.po				\
	extract9.xml.in				\
	extract12.xml.in			\
	extract14.xml.in			\
	fr.po					\
	fr_BE.po				\
	fr_FR.po				\
	iso88591text.xml.in			\
	merge-cdata.xml.in			\
	merge-deepattr.xml.in			\
	merge1.xml.in				\
	merge10.templates_			\
	merge11.xml.in				\
	merge12.xml.in				\
	merge4.xml.in				\
	merge5p.sheet.in			\
	merge5u.sheet.in			\
	merge6.po				\
	merge6.xml.in				\
	merge7.xml.in				\
	merge8.keys.in				\
	schemasmerge1.po			\
	schemasmerge2.po			\
	space-preserve.xml.in			\
	spacepreserve.po			\
	test-quoted.dtd				\
	test-quoted.po				\
	test.po 				\
	test.schemas.in				\
	test.scm				\
	unicodetext.xml.in			\
	$(NULL)

CLEANFILES =					\
	context.xml				\
	context.xml.in.h			\
	extract-comments.xml.h			\
	extract1.desktop.h			\
	extract10.templates_.h			\
	extract12.xml.in.h			\
	extract13.desktop			\
	extract13.desktop.in.h			\
	extract14.xml.in.h			\
	extract9.xml				\
	extract9.xml.in.h			\
	iso88591text.xml.in.h			\
	merge-cdata.xml				\
	merge-deepattr.xml			\
	merge10.templates			\
	merge11.xml				\
	merge12.xml				\
	space-preserve.xml.in.h			\
	space-preserve.xml			\
	test-quoted.dtd.h			\
	test.schemas				\
	test.schemas.in.h			\
	test.scm.h				\
	unicodetext.xml.in.h			\
	$(NULL)
